...

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="AddBirthday">Добавить новый день рождения</string>
    <string name="btnAdd">Добавить</string>
    <string name="FIO">ФИО</string>
    <string name="Who_it">Кем Вам приходится?</string>
    <string name="Date_Birth">Дата рождения (гггг-мм-дд)</string>
</resources>

